EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------

==2/21/2009==
cavedude00: Removed Combat:ChanceToHitDivideBy rule. Default value is now Live Like.
	Required SQL: delete from rule_values where rule_name = 'Combat:ChanceToHitDivideBy';
Congdar: Bots: Revert svn328
	Required SQl:	delete from rule_values where rule_name = 'EQOffline:SpawnBotCount';
			delete from rule_values where rule_name = 'EQOffline:CreateBotCount';
			delete from rule_values where rule_name = 'EQOffline:BotQuest';
Congdar: Bots: UN-Revert svn328 + bug fixes
	(if you updated to svn354)
	Required SQl:	328_bot_management.sql
	Optional SQL:	328_optional_bot_management.sql

==02/19/2009==
Trevius: (Xinu) SoF - Many Opcodes filled in from the client
Trevius: SoF - Aligned the Player Profile a bit more.  Should be pretty accurate now
Trevius: SoF - Added Drakkin race again for use of equipment.  Should work correctly this time.

==02/19/2009==
KLS: SoF - Fix for ammo
Angelox: Bots: Fixed '#bot track' command
Angelox: Bots: Fixed broken entry in BotAI.cpp for '#bot track rare' command
Angelox: Bots: 'Fixed #bot gate airplane' typo
Congdar: Fix for Flash of Steel AA

==02/18/2009==
Trevius: SoF - Combat Damage message now show up in the chat window
Trevius: SoF - GM Skill Trainers will now actually train skills
Angelox: Bots: Added emerald, skyfire, hateplane, skyplane to command #bot gate.
Trevius: SoF - Backed out item stat fix for SoF due to it causing the problem to happen in Titanium

==02/17/2009==
Trevius: SoF - Added Drakkin race to the source so $race and probably other race related stuff can use it.
Trevius: SoF - Added multiple opcodes
Trevius: SoF - Cleaned up the patch_SoF.conf file some
Derision: SoF - Enter Tutorial/Return Home buttons work - Enter Tutorial directly on char creation does not.
Derision: SoF - OP_ZonePlayerToBind (no more disconnection on death).
Derision: SoF - Target nearest NPC (F8) now works.