@@ -69,6 +69,9 @@ OP_LevelUpdate=0x1036 			#SEQ 12/04/08
 OP_Stamina=0x389D 			#SEQ 12/04/08  0x45E2
 OP_ZoneServerReady=0x0000		#doesn't exist in Titanium
 
+OP_RequestClientZoneChange=0x7899	#Trevius 02/08/09
+OP_ZoneChange=0x201e    		#Trevius 02/08/09
+
 OP_ZoneInUnknown=0x0000			#
 OP_LogoutReply=0x0000			#
 OP_PreLogoutReply=0x0000		# 0x711E
@@ -81,14 +84,14 @@ OP_TaskDescription=0x0000		#SEQ 12/04/08
 OP_TaskActivity=0x2E60			#SEQ 12/04/08
 OP_CompletedTasks=0x0ADA		#SEQ 12/04/08
 OP_Weather=0x70A5			#SEQ 12/04/08
-OP_SendAATable=0x6F05			#Trevius 12/20/08 0x6F05
+OP_SendAATable=0x6F05			#Trevius 12/20/08
 OP_UpdateAA=0x45D2			#Trevius 12/20/08
 OP_RespondAA=0x71B9			#Trevius 12/20/08
 OP_ReqClientSpawn=0x014C 		#SEQ 12/04/08
 OP_SpawnDoor=0x68C8			#SEQ 12/04/08
 OP_GroundSpawn=0x30da			#SEQ 12/04/08
 OP_SendZonepoints=0x2992 		#SEQ 12/04/08
-OP_SendAAStats=0x60DB			#Trevius 12/20/08
+OP_SendAAStats=0x60DB			#Trevius 12/20/08 0x71B9
 OP_WorldObjectsSent=0x3703		#New for SoF 1/1/09
 OP_BlockedBuffs=0x39C4			#New for SoF 1/1/09
 OP_SendExpZonein=0x1FA1			#Trevius 12/20/08
@@ -102,31 +105,12 @@ OP_ManaChange=0x0659			#SEQ 12/04/08
 OP_TGB=0x0137				#SEQ 12/04/08
 OP_SpecialMesg=0x1126			#SEQ 12/04/08
 OP_GuildMemberList=0x237e		#SEQ 12/04/08 - 0x430F?
-OP_GuildMOTD=0x5F49   			#SEQ 12/04/08
+OP_GuildMOTD=0x3309   			#Xinu 02/21/09
 OP_CharInventory=0x08A3			#SEQ 12/04/08
 OP_WearChange=0x25F0			#SEQ 12/04/08
 OP_ClientUpdate=0x5Cf3			#SEQ 12/04/08
 OP_ClientReady=0x2854			#Trevius 12/20/08
 OP_SetServerFilter=0x7038 		#SEQ 12/04/08
-
-#Petition Opcodes
-OP_PetitionSearch=0x0000                #search term for petition
-OP_PetitionSearchResults=0x0000         #(list of?) matches from search
-OP_PetitionSearchText=0x0000            #text results of search
-OP_Petition=0x0000			#
-OP_PetitionUpdate=0x0000		#
-OP_PetitionCheckout=0x0000		#
-OP_PetitionCheckIn=0x0000		#
-OP_PetitionQue=0x0000			#
-OP_PetitionUnCheckout=0x0000 		#
-OP_PetitionDelete=0x0000		#
-OP_DeletePetition=0x0000		#
-OP_PetitionResolve=0x0000		#
-OP_PDeletePetition=0x0000		#
-OP_PetitionBug=0x0000			#
-OP_PetitionRefresh=0x0000		#
-OP_PetitionCheckout2=0x0000		#
-OP_PetitionViewPetition=0x0000		#
 
 #Guild Opcodes
 OP_GetGuildMOTD=0x3309			#SEQ 12/04/08
@@ -139,11 +123,11 @@ OP_SetGuildMOTD=0x273F			#Xinu 2/20/09
 OP_GuildList=0x04FB     		#ShowEQ Same as GuildsList???
 OP_ZoneGuildList=0x0000			#
 OP_GuildWar=0x0000			#
-OP_GuildLeader=0x0000			#
+OP_GuildLeader=0x7703			#Xinu 02/22/09
 OP_GuildDemote=0x0000			#
 OP_GetGuildsList=0x0000			#
 OP_GuildPublicNote=0x0000		#
-OP_GuildDelete=0x0000			#
+OP_GuildDelete=0x0B9A			#Xinu 02/22/09
 OP_GuildInviteAccept=0x110F		#
 OP_GuildManageBanker=0x0000		#
 OP_GuildBank=0x0000			#
@@ -167,6 +151,7 @@ OP_GMEmoteZone=0x26CC			#/emotezone
 OP_GMEmoteWorld=0x6256			#/emoteworld (not implemented)
 OP_GMFind=0x24D8			#/find		
 OP_GMKick=0x7A92			#/kick
+OP_GMKill=0x72F2			#Xinu 02/22/09 /kill
 OP_GMNameChange=0x0000
 
 OP_InspectAnswer=0x084F			#SEQ 12/04/08
@@ -199,7 +184,7 @@ OP_ConsentDeny=0x79D7			#Trevius 01/16/09
 OP_AutoFire=0x1486			#Trevius 02/17/09
 OP_PetCommands=0x573A			#Trevius 02/17/09
 OP_DeleteSpell=0x6D7E			#Xinu 02/20/09
-OP_Surname=0x2613			#Trevius 01/16/09
+OP_Surname=0x683E			#Xinu 02/21/09
 OP_FaceChange=0x482D			#Trevius 01/16/09
 OP_SenseHeading=0x1237			#Trevius 01/16/09
 OP_Action=0x5285    			#Trevius 01/16/09
@@ -225,31 +210,48 @@ OP_Jump=0x7871				#Trevius 1/20/08
 OP_Camp=0x6807				#Trevius 1/20/08
 OP_Emote=0x5f4D				#Trevius 2/16/08
 OP_SetRunMode=0x2716			#Trevius 1/20/08
-OP_BankerChange=0x72F2			#Trevius 1/20/08
+OP_BankerChange=0x0000			#Trevius 1/20/08 0x72F2?
 OP_TargetMouse=0x4395			#Trevius 1/20/08
 OP_MobHealth=0x311A			#Trevius 1/20/08
 OP_InitialMobHealth=0x23F1		#Trevius 1/20/08
 OP_TargetHoTT=0x7342			#Trevius 1/20/08
 OP_DeleteSpawn=0x15da			#Trevius 1/20/08
 OP_MobUpdate=0x7647    			#SEQ 01/17/08
-OP_AutoAttack=0x3427			#Trevius 1/20/08
-OP_AutoAttack2=0x6017			#Trevius 1/20/08
-OP_RequestClientZoneChange=0x7899	#Trevius 02/08/09
-OP_ZoneChange=0x201e    		#Trevius 02/08/09
+OP_AutoAttack=0x3427			#Trevius 01/20/08
+OP_AutoAttack2=0x6017			#Trevius 01/20/08
 OP_Consume=0x0CC2			#Trevius 02/08/09
 OP_MoveItem=0x14B3			#Trevius 02/08/09
 OP_ItemPacket=0x78Cd			#Trevius 02/08/09
 OP_ItemLinkResponse=0x31E4		#Trevius 02/16/09
 OP_ItemLinkClick=0x2DE4			#Trevius 02/08/09
-OP_NewSpawn=0x581A    			#Trevius 1/20/08
-OP_AAAction=0x0A4F			#Xinu 2/20/09
-OP_LeadershipExpToggle=0x24D4		#Xinu 2/20/09
+OP_NewSpawn=0x581A    			#Trevius 01/20/08
+OP_Track=0x060A				#Trevius 02/17/09
+OP_TrackTarget=0x21e8			#Xinu 02/22/09
+OP_TrackUnknown=0x6A70			#Trevius 02/17/09
+OP_ClickDoor=0x5AC1			#Trevius 02/22/09
+OP_MoveDoor=0x61DF			#Trevius 02/23/09
+OP_EnvDamage=0x20e7			#Xinu 02/22/09
+OP_BoardBoat=0x54A7			#Xinu 02/22/09
+OP_Forage=0x54C5			#Xinu 02/22/09
+OP_LeaveBoat=0x56A2			#Xinu 02/22/09
+OP_ControlBoat=0x4CE7			#Xinu 02/22/09
+OP_SafeFallSuccess=0x1584		#Xinu 02/22/09
+OP_RezzComplete=0x4b0d			#Derision 02/10/09
+OP_RezzRequest=0x2bb7			#Derision 02/10/09
+OP_RezzAnswer=0x076d			#Derision 02/10/09
+OP_Shielding=0x0829			#Trevius 01/16/09
+OP_RequestDuel=0x3A2B			#Xinu 02/22/09
+OP_MobRename=0x6be5			#Trevius 01/16/09
+OP_AAAction=0x0A4F			#Xinu 02/20/09
+OP_LeadershipExpToggle=0x24D4		#Xinu 02/20/09
 OP_LeadershipExpUpdate=0x0000		#
 OP_PurchaseLeadershipAA=0x0000		#
 OP_UpdateLeadershipAA=0x0000		#
-OP_EnvDamage=0x0000			# 
-OP_TargetReject=0x0000			#
+OP_TestBuff=0x07BF			#/testbuff
+OP_DuelResponse=0x0000			#
+OP_DuelResponse2=0x0000			#
 OP_WeaponUnequip2=0x0000		#0x6213?
+OP_TargetReject=0x0000			#
 OP_WeaponEquip1=0x0000			#
 OP_WeaponEquip2=0x0000			#
 OP_SafePoint=0x0000			#
@@ -257,20 +259,22 @@ OP_Stun=0x0000				#
 OP_MoneyUpdate=0x0000			#
 OP_IncreaseStats=0x0000			#
 OP_CrashDump=0x0000			#
+OP_ZoneComplete=0x0000			#
+OP_ItemLinkText=0x0000			#
+OP_DisciplineUpdate=0x0000		#
+OP_LocInfo=0x0000			#
+OP_FindPersonRequest=0x0000		#
+OP_FindPersonReply=0x0000		#
+OP_ForceFindPerson=0x0000		#
+OP_Sound=0x0000				#
 OP_ReadBook=0x0000			#
 OP_Dye=0x0000				#
-OP_BoardBoat=0x0000			#
 OP_Save=0x0000				#
 OP_LoadSpellSet=0x0000			#
 OP_PetBuffWindow=0x0000			# 
 OP_SaveOnZoneReq=0x0000			#
 OP_Split=0x0000				#
-OP_Forage=0x0000			#
-OP_LeaveBoat=0x0000			#
 OP_LFPGetMatchesRequest=0x0000		#
-OP_GMKill=0x0000			#
-OP_ClickDoor=0x0000			#
-OP_MoveDoor=0x0000			#
 OP_YellForHelp=0x0000			#
 OP_LFPCommand=0x0000			#
 OP_LFPGetMatchesResponse=0x0000		#
@@ -286,7 +290,6 @@ OP_AugmentItem=0x0000			#
 OP_ClientError=0x0000			#
 OP_DeleteItem=0x0000			#
 OP_DeleteCharge=0x0000			#
-OP_ControlBoat=0x0000			#
 OP_DumpName=0x0000			#
 OP_Heartbeat=0x0000			#
 OP_ItemName=0x0000			#
@@ -299,7 +302,7 @@ OP_Sacrifice=0x0000			#
 OP_LootRequest=0x36E3			#Trevius 02/16/09
 OP_EndLootRequest=0x6599		#Trevius 02/16/09
 OP_LootItem=0x3760			#Trevius 02/16/09
-OP_LootComplete=0x0000			#
+OP_LootComplete=0x48F3			#Trevius 02/23/09
 
 #bazaar trader stuff stuff:
 OP_BazaarSearch=0x14F2			#SEQ 12/04/08 0x4675
@@ -307,10 +310,10 @@ OP_TraderDelItem=0x0000			#
 OP_BecomeTrader=0x0000			#
 OP_TraderShop=0x0000			#
 OP_TraderItemUpdate=0x0000		#
-OP_Trader=0x0000			#
+OP_Trader=0x6b41			#Xinu 02/21/09
 OP_ShopItem=0x0000			#
 OP_TraderBuy=0x0000			#
-OP_Barter=0x0000			#
+OP_Barter=0x51bf			#Xinu 02/21/09
 OP_BazaarInspect=0x0000			#
 OP_Bazaar=0x0000			#
 
@@ -376,11 +379,11 @@ OP_GroupInvite=0x6321			#SEQ 12/04/08
 OP_GroupFollow=0x59D4			#SEQ 12/04/08
 OP_GroupUpdate=0x2E5C			#SEQ 12/04/08
 OP_GroupCancelInvite=0x596C		#SEQ 12/04/08
-OP_GroupAcknowledge=0x0000		#
+OP_GroupAcknowledge=0x1306		#Trevius 02/17/09 - or maybe 0x0e22 or 0x6783 ?
 OP_GroupDelete=0x0000			#
 OP_CancelInvite=0x0000			#
-#OP_GroupFollow2=0x1A12			#Xinu 02/20/09
-#OP_GroupInvite2=0x07F6			#Xinu 02/20/09
+OP_GroupFollow2=0x1A12			#Xinu 02/20/09
+OP_GroupInvite2=0x07F6			#Xinu 02/20/09
 
 #LFG Opcodes
 OP_LFGCommand=0x5D81			#Trevius 01/16/09
@@ -460,6 +463,25 @@ OP_Some6ByteHPUpdate=0x0000		#seems to happen when you target group members
 OP_SomeItemPacketMaybe=0x0000		#
 OP_QueryResponseThing=0x0000		#
 
+#Petition Opcodes
+OP_PetitionSearch=0x0000                #search term for petition
+OP_PetitionSearchResults=0x0000         #(list of?) matches from search
+OP_PetitionSearchText=0x0000            #text results of search
+OP_Petition=0x0000			#
+OP_PetitionUpdate=0x0000		#
+OP_PetitionCheckout=0x0000		#
+OP_PetitionCheckIn=0x0000		#
+OP_PetitionQue=0x0000			#
+OP_PetitionUnCheckout=0x0000 		#
+OP_PetitionDelete=0x0000		#
+OP_DeletePetition=0x0000		#
+OP_PetitionResolve=0x0000		#
+OP_PDeletePetition=0x0000		#
+OP_PetitionBug=0x0000			#
+OP_PetitionRefresh=0x0000		#
+OP_PetitionCheckout2=0x0000		#
+OP_PetitionViewPetition=0x0000		#
+
 #Login opcodes
 OP_SessionReady=0x0001			#
 OP_Login=0x0002				#
@@ -526,4 +548,5 @@ OP_InitialHPUpdate=0x0000		#
 #OP_RemoveSpawn=0x0000    		#SEQ 04/17/08 --NEW FROM SEQ
 #OP_Shroud=0x7580 			#SEQ 12/04/08 --NEW FROM SEQ
 #OP_NpcMoveUpdate=0x0d11		#SEQ 10/07/08 --NEW FROM SEQ
+#OP_Zone_MissingName01=0x0000		#
 #new titles avaliable: 			#
